--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,11 @@ li:hover {
   text-decoration: line-through;
 }
 
+.complete {
+  color: #999;
+  text-decoration: line-through;
+}
+
 input[type='checkbox'].done-todo {
   margin: 5px 5px 2px 0;
 }
